ingress/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: ingress-app
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - host: ramutech.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-ui-svc
                port:
                  number: 80
          - path: /flask
            pathType: Prefix
            backend:
              service:
                name: pythonapp-svc
                port:
                  number: 80
